apps/k8s/knarr/radarr/radarr.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: radarr
  namespace: knarr
  labels:
    app: radarr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: radarr
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: radarr
    spec:
      dnsConfig:
        options:
          - name: ndots
            value: "1"
      containers:
      - name: radarr
        image: lscr.io/linuxserver/radarr:latest
        ports:
        - containerPort: 7878
        volumeMounts:
        - name: config
          mountPath: /config
        - name: media
          mountPath: /media
      volumes:
      - name: config
        persistentVolumeClaim:
          claimName: radarr-config-pvc
      - name: media
        persistentVolumeClaim:
          claimName: media-pvc  # The Rclone mount
---
apiVersion: v1
kind: Service
metadata:
  name: radarr
  namespace: knarr
spec:
  selector:
    app: radarr
  ports:
  - port: 80
    targetPort: 7878
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: radarr-ingress
  namespace: knarr
  annotations:
    kubernetes.io/ingress.class: traefik
    cert-manager.io/cluster-issuer: letsencrypt-prod
    external-dns.alpha.kubernetes.io/target: "14dba35c-b082-4cf5-8319-05b87f07357c.cfargotunnel.com"
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: "Radarr"
    gethomepage.dev/group: "Downloads"
    gethomepage.dev/icon: "radarr.png"
    gethomepage.dev/description: "Movie manager"
spec:
  tls:
  - hosts:
    - radarr.yggdrasil.rip
    secretName: radarr-tls
  rules:
  - host: radarr.yggdrasil.rip
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: radarr
            port:
              number: 80
